@@ -1,6 +1,6 @@
 Package: arm
-Version: 1.1-10
-Date: 2008-7-10
+Version: 1.1-11
+Date: 2008-7-15
 Title: Data Analysis Using Regression and Multilevel/Hierarchical Models
 Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Yu-Sung Su <ys463@columbia.edu>,
@@ -11,7 +11,7 @@ Author: Andrew Gelman <gelman@stat.columbia.edu>,
         Tian Zheng <tzheng@stat.columbia.edu>
 Maintainer: Yu-Sung Su <ys463@columbia.edu>
 Depends: methods, R (>= 2.6.0), MASS, Matrix (>= 0.999375-10), lme4 (>= 0.999375-16), R2WinBUGS
-Suggests: car, foreign, nnet
+Suggests: car, foreign
 Description: R functions for processing lm, glm, mer and polr outputs.
 URL: http://www.stat.columbia.edu/~gelman/software/
 License: GPL (>= 2)
